--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ django-cors-headers==3.2.0
 django-filter==2.2.0
 django-js-asset==1.2.2
 django-simpleui==3.9
-djangorestframework==3.11.0
+djangorestframework==3.13.1
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.5.0
 drf-yasg==1.17.0
@@ -32,7 +32,7 @@ Markdown==3.1.1
 MarkupSafe==1.1.1
 mysqlclient==1.4.6
 packaging==19.2
-Pillow==9.4.0
+Pillow==9.5.0
 pycparser==2.19
 pycrypto==2.6.1
 pycryptodomex==3.9.4
@@ -51,6 +51,7 @@ Serializer==0.2.1
 simplejson==3.17.0
 six==1.13.0
 sqlparse==0.3.0
+tzlocal==2.1
 uritemplate==3.0.0
 urllib3==1.25.7
 Werkzeug==1.0.1
