--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-bilibili-api==3.1.3
+bilibili-api-python==16.1.1
 Django==2.2.28
 django-cors-headers==3.2.0
 django-filter==2.4.0
@@ -10,7 +10,7 @@ mysqlclient==1.4.6
 PyMySQL==0.9.3
 pycryptodome==3.10.1
 pytz==2019.3
-PyYAML==5.4
+PyYAML==6.0
 requests==2.31.0
 uwsgi==2.0.22
 wget==3.2
